style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

body {
    width: 100vw;
    height: 100vh;
    background-color: azure;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* calculator */

.calculator {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgb(236, 227, 215);
    border: 3px solid rgb(241, 220, 192);
    border-radius: 10px;
    width: 400px;
    padding: 16px;
    gap: 16px;
}

/* display */

.display-area {
    padding: 8px 8px 0 8px;
    width: 100%;
}

.display {
    border: 3px solid rgb(241, 220, 192);
    border-radius: 10px;
    background-color: azure;
    text-align: right;
    width: 100%;
    padding: 24px 8px;
    font-size: 20px;
    height: calc(24px * 3);
}

/* buttons */

.button-area {
    display: flex;
    flex-wrap: wrap;
}

button {
    margin: 8px;
    width: calc((100% / 4) - 16px);
    aspect-ratio: 1/1;
    font-size: 24px;
    border-radius: 10px;
}

#github-logo {
    width: 28px;
    height: auto;
}

#github-button > a {
    display: flex;
    align-items: center;
    justify-content: center;
}

button:hover {
    filter: brightness(0.90);
}

